        PR c++/30897         * pt.c (push_template_decl_real): Set DECL_CONTEXT on template         template parms.         (lookup_template_class): Use it to get the outer template args         for instantiating one.

PR c++/29236
        * pt.c (reduce_template_parm_level): tsubst the parameters
        of a template template parm.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@129844 138bc75d-0d04-0410-961f-82ee72b054a4